--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
-    <title>Riksdagens debattörer</title>
+    <title>Riksdagens snackpåsar</title>
 </head>
 
 <body>
+    <h1>hej</h1>
+    <button id="getButton">Get</button>
+    <div>
+        <p id="displayP"></p>
+    </div>
+
+
     <script src="dist/js/main.js"></script>
 </body>
 
