primitive rendering of toplist. some dir changes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-    <h1>hej</h1>
-    <button id="getButton">Get</button>
+    <h1>Debattoppen</h1>
+    <button id="getButton">Hämta topplista</button>
     <div>
-        <p id="displayP"></p>
+        <table id="toplist">
+
+        </table>
     </div>
 
 
