reads from placeholder mpobj. Party color vars.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <h1>Debattoppen</h1>
     <button id="getButton">Hämta topplista</button>
     <div>
-        <table id="toplist">
-
+        <table>
+            <tbody id="toplist">
+            </tbody>
         </table>
     </div>
 
-
+    <script src="saved-allMPs.js"></script>
     <script src="dist/js/main.js"></script>
+
 
 </body>
 
