some kind of MVC working. load animation.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,28 @@
 </head>
 
 <body>
+
     <h1>Debattoppen</h1>
     <button id="getButton">Hämta topplista</button>
+    <!-- load spinner courtesy of http://tobiasahlin.com/spinkit/ -->
+    <div class="loading hidden">
+        <h4>Laddar in data, var god vänta...</h4>
+        <div class="sk-circle">
+            <div class="sk-circle1 sk-child"></div>
+            <div class="sk-circle2 sk-child"></div>
+            <div class="sk-circle3 sk-child"></div>
+            <div class="sk-circle4 sk-child"></div>
+            <div class="sk-circle5 sk-child"></div>
+            <div class="sk-circle6 sk-child"></div>
+            <div class="sk-circle7 sk-child"></div>
+            <div class="sk-circle8 sk-child"></div>
+            <div class="sk-circle9 sk-child"></div>
+            <div class="sk-circle10 sk-child"></div>
+            <div class="sk-circle11 sk-child"></div>
+            <div class="sk-circle12 sk-child"></div>
+        </div>
+    </div>
+    <!-- end -->
     <div>
         <table>
             <tbody id="toplist">
