event listeners working

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
-    <title>Debattoppen</title>
+    <title>Debatt-toppen</title>
 </head>
 
 <body>
 
-    <h1>Debattoppen</h1>
+    <h1>Debatt-toppen</h1>
     <button id="getButton">Hämta topplista</button>
     <!-- load spinner courtesy of http://tobiasahlin.com/spinkit/ -->
     <div class="loading hidden">
