--- a/index.html
+++ b/index.html
@@ -12,8 +12,55 @@
 
 <body>
 
+    <!-- nav-bar-->
+    <nav class="navbar fixed-bottom navbar-toggleable-md navbar-light bg-faded">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+        <!-- thesee two makes margins but also causes bad behaviour -->
+        <!--<a class="navbar-brand" href="#"></a>-->
+        <!--<span class="navbar-text">&nbsp;</span>-->
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link launch-nav-event" href="#">Topplistan<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropup">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Filtrera på parti</a>
+                    <div class="dropdown-menu" id="drop-noclose" aria-labelledby="navbarDropdownMenuLink">
+                        <form class="form-inline">
+                            <div class="btn-group" data-toggle="buttons">
+                                <button class="btn btn-outline-danger filterParty" type="button">S</button>
+                                <button class="btn btn-outline-danger filterParty" checked type="button">V</button>
+                                <button class="btn btn-outline-success filterParty" type="button">MP</button>
+                                <button class="btn btn-outline-primary filterParty" type="button">M</button>
+                                <button class="btn btn-outline-primary filterParty" type="button">L</button>
+                                <button class="btn btn-outline-success filterParty" type="button">C</button>
+                                <button class="btn btn-outline-primary filterParty" type="button">KD</button>
+                                <button class="btn btn-outline-warning filterParty">SD</button>
+                            </div>
+                        </form>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link launch-nav-event" href="#">Partitoppen</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link launch-nav-event" href="#">Könsfördelning</a>
+                </li>
+            </ul>
+            <div class="navbar-nav navbar-right">
+                <a class="nav-item nav-link launch-nav-event" href="#">Om</a>
+            </div>
+        </div>
+    </nav>
+    <!-- end nav -->
+
+
     <h1>Debatt-toppen</h1>
     <button id="getButton" class="btn btn-primary">Hämta topplista</button>
+
     <!-- load spinner courtesy of http://tobiasahlin.com/spinkit/ -->
     <div class="loading hidden">
         <h4>Laddar in data, var god vänta...</h4>
@@ -33,6 +80,7 @@
         </div>
     </div>
     <!-- end spinner-->
+
     <!-- Modal -->
     <div class="modal fade" id="mpModal" tabindex="-1" role="dialog" aria-labelledby="mpModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
@@ -41,11 +89,6 @@
         </div>
     </div>
     <!-- end modal -->
-    <!-- modal button--
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mpModal">
-  Launch demo modal
-</button>
-    --end modal button-->
     <div>
         <table>
             <tbody id="toplist">
@@ -58,6 +101,7 @@
 
     <script src="saved-allMPs.js"></script>
     <script src="dist/js/main.js"></script>
+    <script src="dist/js/jq_code.js"></script>
 
 
 </body>
