--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
                     <a class="nav-link launch-nav-event" href="#">Topplistan<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropup">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Filtrera på parti</a>
                     <div class="dropdown-menu" id="drop-noclose" aria-labelledby="navbarDropdownMenuLink">
                         <form class="form-inline">
                             <div class="btn-group" data-toggle="buttons">
-                                <button class="btn btn-outline-danger filterParty" type="button">S</button>
-                                <button class="btn btn-outline-danger filterParty" checked type="button">V</button>
-                                <button class="btn btn-outline-success filterParty" type="button">MP</button>
-                                <button class="btn btn-outline-primary filterParty" type="button">M</button>
-                                <button class="btn btn-outline-primary filterParty" type="button">L</button>
-                                <button class="btn btn-outline-success filterParty" type="button">C</button>
-                                <button class="btn btn-outline-primary filterParty" type="button">KD</button>
-                                <button class="btn btn-outline-warning filterParty">SD</button>
+                                <button class="btn btn-outline-danger partyBtn">S</button>
+                                <button class="btn btn-outline-danger partyBtn">V</button>
+                                <button class="btn btn-outline-success partyBtn">MP</button>
+                                <button class="btn btn-outline-primary partyBtn">M</button>
+                                <button class="btn btn-outline-primary partyBtn">L</button>
+                                <button class="btn btn-outline-success partyBtn">C</button>
+                                <button class="btn btn-outline-primary partyBtn">KD</button>
+                                <button class="btn btn-outline-warning partyBtn">SD</button>
+                                <button class="btn btn-outline-secondary partyBtn">-</button>
                             </div>
                         </form>
                     </div>
