--- a/index.html
+++ b/index.html
@@ -59,28 +59,29 @@
     </nav>
     <!-- end nav -->
 
-
     <h1>Debatt-toppen</h1>
     <button id="getButton" class="btn btn-primary">Hämta topplista</button>
 
     <!-- load spinner courtesy of http://tobiasahlin.com/spinkit/ -->
-    <div class="loading hidden">
-        <h4>Laddar in data, var god vänta...</h4>
-        <div class="sk-circle">
-            <div class="sk-circle1 sk-child"></div>
-            <div class="sk-circle2 sk-child"></div>
-            <div class="sk-circle3 sk-child"></div>
-            <div class="sk-circle4 sk-child"></div>
-            <div class="sk-circle5 sk-child"></div>
-            <div class="sk-circle6 sk-child"></div>
-            <div class="sk-circle7 sk-child"></div>
-            <div class="sk-circle8 sk-child"></div>
-            <div class="sk-circle9 sk-child"></div>
-            <div class="sk-circle10 sk-child"></div>
-            <div class="sk-circle11 sk-child"></div>
-            <div class="sk-circle12 sk-child"></div>
+    <section id="loading-section" class="hidden">
+        <div>
+            <h4>Laddar in data, var god vänta...</h4>
+            <div class="sk-circle">
+                <div class="sk-circle1 sk-child"></div>
+                <div class="sk-circle2 sk-child"></div>
+                <div class="sk-circle3 sk-child"></div>
+                <div class="sk-circle4 sk-child"></div>
+                <div class="sk-circle5 sk-child"></div>
+                <div class="sk-circle6 sk-child"></div>
+                <div class="sk-circle7 sk-child"></div>
+                <div class="sk-circle8 sk-child"></div>
+                <div class="sk-circle9 sk-child"></div>
+                <div class="sk-circle10 sk-child"></div>
+                <div class="sk-circle11 sk-child"></div>
+                <div class="sk-circle12 sk-child"></div>
+            </div>
         </div>
-    </div>
+    </section>
     <!-- end spinner-->
 
     <!-- Modal -->
@@ -91,16 +92,32 @@
         </div>
     </div>
     <!-- end modal -->
-    <div>
-        <table>
-            <tbody id="toplist">
-            </tbody>
-        </table>
-    </div>
+    <main id="page-wrap">
+        <!-- summary stats -->
+        <section id="chart-section">
+            <div id="chart-container">
+                <canvas id="pie-chart">
+                </canvas>
+            </div>
+        </section>
+        <!-- end summary stats -->
+        <!-- toplist -->
+        <section id="toplist-section">
+            <table>
+                <tbody id="toplist">
+                </tbody>
+            </table>
+        </section>
+        <!-- end toplist -->
+        <!-- about section -->
+        <section id="about-section">
+        </section>
+        <!-- end about -->
+    </main>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="saved-allMPs.js"></script>
     <script src="dist/js/main.js"></script>
     <script src="dist/js/jq_code.js"></script>
