comments and about section toggle

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         </section>
         <!-- end toplist -->
         <!-- about section -->
-        <section id="about-section">
+        <section id="about-section" class="hidden">
+            <p>Här skriver vi lite om sidan</p>
         </section>
         <!-- end about -->
     </main>
