better data for chart inc quota

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- summary stats -->
         <section id="chart-section">
             <div id="chart-container">
-                <canvas id="pie-chart">
+                <canvas id="chart">
                 </canvas>
             </div>
         </section>
