chart display works. gender chart buggy

--- a/index.html
+++ b/index.html
@@ -94,9 +94,15 @@
     <!-- end modal -->
     <main id="page-wrap">
         <!-- summary stats -->
-        <section id="chart-section">
-            <div id="chart-container">
-                <canvas id="chart">
+        <section id="party-chart-section">
+            <div class="chart-container">
+                <canvas id="partyChart">
+                </canvas>
+            </div>
+        </section>
+        <section id="gender-chart-section">
+            <div class="chart-container">
+                <canvas id="genderChart">
                 </canvas>
             </div>
         </section>
