chart colors + size ok, phew

--- a/index.html
+++ b/index.html
@@ -94,24 +94,21 @@
     </div>
     <!-- end modal -->
     <main id="page-wrap">
-        <!-- summary stats -->
+        <!-- chart party summart -->
         <section id="party-chart-section">
             <div class="chart-container">
                 <div class="ct-chart ct-perfect-fourth" id="partyChart">
-                    <!--<canvas id="partyChart">
-                </canvas>-->
                 </div>
             </div>
         </section>
+        <!-- chart gender summary -->
         <section id="gender-chart-section">
             <div class="chart-container">
-                <div class="ct-chart ct-perfect-fourth" id="genderChart">
-                    <!--<canvas id="genderChart">
-                </canvas>-->
+                <div class="ct-chart ct-perfect-fourth ct-bar" id="genderChart">
                 </div>
             </div>
         </section>
-        <!-- end summary stats -->
+        <!-- end chart -->
         <!-- toplist -->
         <section id="toplist-section">
             <table>
