--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-
     <!-- nav-bar-->
     <nav class="navbar fixed-bottom navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <!-- thesee two makes margins but also causes bad behaviour -->
         <!--<a class="navbar-brand" href="#"></a>-->
         <!--<span class="navbar-text">&nbsp;</span>-->
@@ -89,6 +88,37 @@
     <div class="modal fade" id="mpModal" tabindex="-1" role="dialog" aria-labelledby="mpModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="mpModalLabel"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="modal-facts">
+                    </div>
+                    <hr>
+                    <ul id="modal-speech-list">
+                    </ul>
+                    <!-- modal speech text -->
+                    <div id="modal-speech-text" class="hidden">
+                        <button type="button" class="btn btn-primary" id="close-speech-btn">Tillbaka</button>
+                        <div>
+                            <p class="debate-context inline"></p>
+                            <p class="speech-header"></p>
+                        </div>
+                        <div id="speech-body">
+                        </div>
+                        <p id="speech-footer">
+                        </p>
+                    </div>
+                    <!-- end modal speech text -->
+                    <hr>
+                    <span class="own-debate debate-topic">     </span> = Eget anförande
+                    <span class="comeback-debate debate-topic">     </span> = Replik på någon annan <br>
+                    <i class="em em-mega"></i>
+                    <i class="em em-speech_balloon"></i> = Ytterligare anföranden/repliker i samma debatt.
+                </div>
             </div>
         </div>
     </div>
