--- a/index.html
+++ b/index.html
@@ -13,132 +13,31 @@
 </head>
 
 <body>
-    <!-- nav-bar-->
-    <nav class="navbar fixed-bottom navbar-toggleable-md navbar-light bg-faded">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- thesee two makes margins but also causes bad behaviour -->
-        <!--<a class="navbar-brand" href="#"></a>-->
-        <!--<span class="navbar-text">&nbsp;</span>-->
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link launch-nav-event" href="#">Topplistan<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropup">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Filtrera på parti</a>
-                    <div class="dropdown-menu" id="drop-noclose" aria-labelledby="navbarDropdownMenuLink">
-                        <form class="form-inline">
-                            <div class="btn-group" data-toggle="buttons">
-                                <button class="btn btn-outline-danger partyBtn">S</button>
-                                <button class="btn btn-outline-danger partyBtn">V</button>
-                                <button class="btn btn-outline-success partyBtn">MP</button>
-                                <button class="btn btn-outline-primary partyBtn">M</button>
-                                <button class="btn btn-outline-primary partyBtn">L</button>
-                                <button class="btn btn-outline-success partyBtn">C</button>
-                                <button class="btn btn-outline-primary partyBtn">KD</button>
-                                <button class="btn btn-outline-warning partyBtn">SD</button>
-                                <button class="btn btn-outline-secondary partyBtn">-</button>
-                            </div>
-                        </form>
+
+    <!-- load section -->
+    <section id="loading-section" class="">
+        <div class="container-fluid d-flex align-items-center">
+            <div class="row">
+                <div class="col">
+                    <h4>Hämtar data från Riksdagen...</h4>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                            0%
+                        </div>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link launch-nav-event" href="#">Partitoppen</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link launch-nav-event" href="#">Könsfördelning</a>
-                </li>
-            </ul>
-            <div class="navbar-nav navbar-right">
-                <a class="nav-item nav-link launch-nav-event" href="#">Om</a>
-            </div>
-        </div>
-    </nav>
-    <!-- end nav -->
-
-    <h1>Debatt-toppen</h1>
-    <button id="getButton" class="btn btn-primary">Hämta topplista</button>
-
-    <!-- load spinner courtesy of http://tobiasahlin.com/spinkit/ -->
-    <section id="loading-section" class="hidden">
-        <div>
-            <h4>Laddar in data, var god vänta...</h4>
-            <div class="sk-circle">
-                <div class="sk-circle1 sk-child"></div>
-                <div class="sk-circle2 sk-child"></div>
-                <div class="sk-circle3 sk-child"></div>
-                <div class="sk-circle4 sk-child"></div>
-                <div class="sk-circle5 sk-child"></div>
-                <div class="sk-circle6 sk-child"></div>
-                <div class="sk-circle7 sk-child"></div>
-                <div class="sk-circle8 sk-child"></div>
-                <div class="sk-circle9 sk-child"></div>
-                <div class="sk-circle10 sk-child"></div>
-                <div class="sk-circle11 sk-child"></div>
-                <div class="sk-circle12 sk-child"></div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- end spinner-->
+    <!-- end load -->
 
-    <!-- Modal -->
-    <div class="modal fade" id="mpModal" tabindex="-1" role="dialog" aria-labelledby="mpModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="mpModalLabel"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div id="modal-facts">
-                    </div>
-                    <hr>
-                    <ul id="modal-speech-list">
-                    </ul>
-                    <!-- modal speech text -->
-                    <div id="modal-speech-text" class="hidden">
-                        <button type="button" class="btn btn-primary" id="close-speech-btn">Tillbaka</button>
-                        <div>
-                            <p class="debate-context inline"></p>
-                            <p class="speech-header"></p>
-                        </div>
-                        <div id="speech-body">
-                        </div>
-                        <p id="speech-footer">
-                        </p>
-                    </div>
-                    <!-- end modal speech text -->
-                    <hr>
-                    <span class="own-debate debate-topic">     </span> = Eget anförande
-                    <span class="comeback-debate debate-topic">     </span> = Replik på någon annan <br>
-                    <i class="em em-mega"></i>
-                    <i class="em em-speech_balloon"></i> = Ytterligare anföranden/repliker i samma debatt.
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end modal -->
-    <main id="page-wrap">
-        <!-- chart party summart -->
-        <section id="party-chart-section">
-            <div class="chart-container">
-                <div class="ct-chart ct-perfect-fourth" id="partyChart">
-                </div>
-            </div>
-        </section>
-        <!-- chart gender summary -->
-        <section id="gender-chart-section">
-            <div class="chart-container">
-                <div class="ct-chart ct-perfect-fourth ct-bar" id="genderChart">
-                </div>
-            </div>
-        </section>
-        <!-- end chart -->
+    <!-- MAIN PAGE -->
+    <main id="page-wrap" class="container-fluid">
+
+        <!-- page hero -->
+        <h1>Talartoppen i Riksdagen</h1>
+        <!-- end hero -->
+
         <!-- toplist -->
         <section id="toplist-section">
             <table>
@@ -147,22 +46,128 @@
             </table>
         </section>
         <!-- end toplist -->
+
+        <!--  party chart -->
+        <section id="party-chart-section">
+            <div class="chart-container">
+                <div class="ct-chart ct-perfect-fourth" id="partyChart">
+                </div>
+            </div>
+        </section>
+        <!-- end party chart -->
+
+        <!-- gender chart -->
+        <section id="gender-chart-section">
+            <div class="chart-container">
+                <div class="ct-chart ct-perfect-fourth ct-bar" id="genderChart">
+                </div>
+            </div>
+        </section>
+        <!-- end gender chart -->
+
         <!-- about section -->
         <section id="about-section" class="hidden">
             <p>Här skriver vi lite om sidan</p>
         </section>
         <!-- end about -->
+
+        <!-- nav-bar-->
+        <nav class="navbar fixed-bottom navbar-toggleable-md navbar-light bg-faded">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <!-- thesee two makes margins but also causes bad behaviour -->
+            <!--<a class="navbar-brand" href="#"></a>-->
+            <!--<span class="navbar-text">&nbsp;</span>-->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link launch-nav-event" href="#">Topplistan<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropup">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Filtrera på parti</a>
+                        <div class="dropdown-menu" id="drop-noclose" aria-labelledby="navbarDropdownMenuLink">
+                            <form class="form-inline">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <button class="btn btn-outline-danger partyBtn">S</button>
+                                    <button class="btn btn-outline-danger partyBtn">V</button>
+                                    <button class="btn btn-outline-success partyBtn">MP</button>
+                                    <button class="btn btn-outline-primary partyBtn">M</button>
+                                    <button class="btn btn-outline-primary partyBtn">L</button>
+                                    <button class="btn btn-outline-success partyBtn">C</button>
+                                    <button class="btn btn-outline-primary partyBtn">KD</button>
+                                    <button class="btn btn-outline-warning partyBtn">SD</button>
+                                    <button class="btn btn-outline-secondary partyBtn">-</button>
+                                </div>
+                            </form>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link launch-nav-event" href="#">Partitoppen</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link launch-nav-event" href="#">Könsfördelning</a>
+                    </li>
+                </ul>
+                <div class="navbar-nav navbar-right">
+                    <a class="nav-item nav-link launch-nav-event" href="#">Om</a>
+                </div>
+            </div>
+        </nav>
+        <!-- end nav -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="mpModal" tabindex="-1" role="dialog" aria-labelledby="mpModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="mpModalLabel"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="modal-facts">
+                        </div>
+                        <hr>
+                        <ul id="modal-speech-list">
+                        </ul>
+                        <!-- modal speech text -->
+                        <div id="modal-speech-text" class="hidden">
+                            <button type="button" class="btn btn-primary" id="close-speech-btn">Tillbaka</button>
+                            <div>
+                                <p class="debate-context inline"></p>
+                                <p class="speech-header"></p>
+                            </div>
+                            <div id="speech-body">
+                            </div>
+                            <p id="speech-footer">
+                            </p>
+                        </div>
+                        <!-- end modal speech text -->
+                        <hr>
+                        <span class="own-debate debate-topic">     </span> = Eget anförande
+                        <span class="comeback-debate debate-topic">     </span> = Replik på någon annan <br>
+                        <i class="em em-mega"></i>
+                        <i class="em em-speech_balloon"></i> = Ytterligare anföranden/repliker i samma debatt.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end modal -->
     </main>
+
+    <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script> -->
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="saved-allMPs.js"></script>
     <script src="dist/js/main.js"></script>
     <script src="dist/js/jq_code.js"></script>
     <script src="dist/js/chart_animation.js"></script>
-
+    <!-- end scripts -->
 
 </body>
 
