two column table

--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
             <img src="images/arms.svg.png" id="riksdag-logo" alt="Riksdagen logo">
             <div>
                 <h4 class="display-6">Talartoppen <span class="lead">- Politikerna som debatterar mest i Riksdagen</span></h4>
-
             </div>
-
-
         </div>
     </div>
     <!-- end hero -->
@@ -51,10 +48,38 @@
 
         <!-- toplist -->
         <section id="toplist-section">
-            <table>
-                <tbody id="toplist">
-                </tbody>
-            </table>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th></th>
+                                    <th>Namn</th>
+                                    <th class="td-right">Debattinlägg</th>
+                                </tr>
+                            </thead>
+                            <tbody id="toplist">
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th></th>
+                                    <th>Namn</th>
+                                    <th class="td-right">Debattinlägg</th>
+                                </tr>
+                            </thead>
+                            <tbody id="toplist2">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- end toplist -->
 
