--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
         <!-- gender chart -->
         <section id="gender-chart-section" class="hidden">
             <div class="container">
-                <div class="row justify-space-between">
-                    <div class="col-lg-4">
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 half">
                         <div class="ct-chart ct-perfect-fourth ct-bar" id="genderChart">
                         </div>
                     </div>
-                    <div class="col-lg-4 border-left">
+                    <div class="col-lg-4 border-left half">
                         <p class="lead">Könsfördelning</p>
                         <p>Grafen visar det genomsnittliga antalet gånger som en manlig respektive en kvinnlig ledamot har talat i riksdagen under perioden*.</p>
                         <p class="mark" id="gender-chart-conclusion"></p>
