Edge fixes (nodelist foreach fix, progress bar)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="loading-section" class="">
         <div class="container-fluid d-flex align-items-center">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-12">
                     <h4 class="lead">Hämtar data från Riksdagen...</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -203,7 +203,7 @@
                     <a class="nav-item nav-link launch-nav-event margin-left" href="#">Om</a>
                 </div>
             </div>
-            <div id="dateline-sm" class="navbar-text lead-smaller ml-auto">Sedan bla bla</div>
+            <div id="dateline-sm" class="navbar-text lead-smaller ml-auto"></div>
         </nav>
         <!-- end nav -->
 
