--- a/index.html
+++ b/index.html
@@ -166,8 +166,11 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto margin-left">
-                    <li class="nav-item active">
+                    <li class="nav-item active bigger main-lists">
                         <a class="nav-link launch-nav-event" href="#">Topplistan<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item main-lists">
+                        <a class="nav-link launch-nav-event" href="#">Bottenlistan<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropup">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
